# todoist_bot

./: .pre-commit-config.yaml  LICENSE  Procfile  README.md  main.py  pyproject.toml  requirements.txt
todoist_bot/: headers.py  read_changes.py  task_subsets.py  tree.py  write_changes.py
