[tool.poetry]
name = "todoist-bot"
version = "0.2.5"
description = ""
authors = ["Shay Hill <shay_public@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "todoist_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
paragraphs = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
commitizen = "^2.39.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.5"
tag_format = "$version"
version_files = [
    "pyproject.toml:^version"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__.py"]

pythonVersion = "3.11"
pythonPlatform = "Any"

typeCheckingMode = "strict"
reportShadowedImports = true
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true
reportMissingModuleSource = false
